# cloudmesh-ai-release

./: .gitignore  CHANGELOG.md  Makefile  README.md  VERSION  pyproject.toml
src/cloudmesh/ai/command/: release.py
tests/cloudmesh/ai/command/: test_release.py
