[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-release"
version = "0.1.0"
description = "Release automation tool for Cloudmesh AI packages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "rich",
    "twine",
    "build",
]

[project.entry-points."cloudmesh.ai.command"]
release = "cloudmesh.ai.command.release:release_group"