[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-release"
dynamic = ["version"]
description = "Release automation tool for Cloudmesh AI packages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "rich",
    "twine",
    "build",
]

[project.entry-points."cloudmesh.ai.command"]
release = "cloudmesh.ai.command.release:release_group"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]